k1J-1201: Handle null recipient in CitizenCertificateConverter (#247)